--- a/frontend/src/app/Components/admin/admin.component.html
+++ b/frontend/src/app/Components/admin/admin.component.html
@@ -9,38 +9,43 @@
         <form class="form-horizontal shadow p-3 mb-5 bg-white rounded " #f="ngForm" (ngSubmit)="f.form.valid && addProd(desc,quan,price,prodname,image)"
                 *ngIf="showAdd">
                 <div class="row">
-                        <div class="col-6">
-                                <div class="form-group">
+                        <div class="col-7">
+                                <div class="form-group input-box">
+                                        <span class="col-2 input-label">Product Name:</span>
                                         <input type="text" class="form-control" placeholder="Product Name" #prodname
                                                 ngModel name="prodname">
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group input-box">
+                                        <span class="col-2 input-label">Product Description:</span>
                                         <textarea type="text" class="form-control" placeholder="description" name="desc"
                                                 #desc ngModel rows="5"></textarea>
                                 </div>
-                                <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="quantity" name="quan" #quan
+                                <div class="form-group input-box">
+                                        <span class="col-2 input-label">Quantity:</span>
+                                        <input type="text" class="form-control" placeholder="quantity" name="quan" #quan (keypress)="onKeyPressNumeric($event)" maxlength="6"
+                                                ngModel>
+                                </div>
+                                <div class="form-group input-box">
+                                        <span class="col-2 input-label">Price:</span>
+                                        <input type="text" class="form-control" placeholder="price" name="price" #price (keypress)="onKeyPressNumeric($event)" maxlength="6"
                                                 ngModel>
                                 </div>
                                 <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="price" name="price" #price
-                                                ngModel>
-                                </div>
-                                <div class="form-group">
+                                        <span>Note: Supported formats are JPG,PNG,IMG</span>
                                         <input type="file" class="form-control" placeholder="Product Picture" #image
                                                 accept="image/*" name="image"
                                                 (change)="handleFileInput($event.target.files)">
                                 </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-5">
                                 <h4 class="text-center">Image preview</h4>
-                                <img [src]="imageUrl" style="width:400px;height: 300px;">
+                                <img [src]="imageUrl" class="image-display">
 
                         </div>
                         
                 </div>
                 <div class="row">
-                        <div class="col-6">
+                        <div class="col-7">
                                 <input type="submit" class=" btn btn-primary" value="Add Product">
                         </div>
                 </div>
