--- a/frontend/src/app/Components/login/login.component.css
+++ b/frontend/src/app/Components/login/login.component.css
@@ -1,9 +1,27 @@
 .login{
-    background-image:  url(/assets/img/login.png);
+    background-image:  url(/assets/img/login1.jpg);
 }
 .card{
     height: 200px;
 }
 .row{
     margin-top: 15px;
+}
+
+.login-input-box {
+    display:flex;
+}
+
+.login-input-label {
+    width: 17%;
+    padding-top: 5px;
+}
+
+.login-input {
+    width: 50%;
+}
+
+.invalid-error {
+    padding-left: 17%;
+    color: red;
 }
