--- a/frontend/src/app/Components/login/login.component.html
+++ b/frontend/src/app/Components/login/login.component.html
@@ -7,12 +7,21 @@
                             <form [formGroup]="loginForm" (ngSubmit)="login()">
                                 <div *ngIf="error">Content to render when condition is true.</div>
                                 <div class="form-group">
-                                    <input class="form-control" formControlName="email" placeholder="abc@gmail.com" style="width:50%">
+                                    <div class="login-input-box">
+                                        <span class="login-input-label">Login ID:</span>
+                                        <input class="form-control login-input" formControlName="email" placeholder="abc@gmail.com">
+                                    </div>
+                                    <!-- <div class="invalid-error" *ngIf="!validateEmail()">
+                                        <label>* Please enter a valid Email address.</label>
+                                    </div> -->
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control" formControlName="password" placeholder="Password" style="width:50%">
+                                    <div class="login-input-box">
+                                        <span class="login-input-label">Password:</span>
+                                        <input type="password" class="form-control" formControlName="password" placeholder="Password" style="width:50%">
+                                    </div>
                                 </div>
-                                <input type="submit" class="btn btn-secondary align-right" value="Login">
+                                <button type="submit" class="btn btn-secondary align-right" value="Login">Login</button>
                             </form>
                     </div>
             </div>
