--- a/frontend/src/app/Components/navigation/navigation.component.html
+++ b/frontend/src/app/Components/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container navbar-sizing">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
       aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
