fix frontend router

--- a/frontend/src/app/component/login/login.component.html
+++ b/frontend/src/app/component/login/login.component.html
@@ -9,7 +9,7 @@
                                 <div class="form-group">
                                     <div class="login-input-box">
                                         <span class="login-input-label">Login ID:</span>
-                                        <input class="form-control login-input" formControlName="email" placeholder="abc@gmail.com">
+                                        <input class="form-control login-input" formControlName="email" placeholder="Username">
                                     </div>
                                     <!-- <div class="invalid-error" *ngIf="!validateEmail()">
                                         <label>* Please enter a valid Email address.</label>
