--- a/frontend/src/app/component/navigation/navigation.component.html
+++ b/frontend/src/app/component/navigation/navigation.component.html
@@ -1,49 +1,86 @@
-<div class="container navbar-sizing">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
-      aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01" [ngSwitch]="loggedType">
-      <div *ngSwitchCase="'home'">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item">
-            <a class=" nav-link" routerLink="/register">Register</a>
-          </li>
-          <li class="nav-item">
-            <a class=" nav-link" routerLink="/login">Login</a>
-          </li>
-        </ul>
+<div class="hero_area">
+  <!-- header section strats -->
+  <a class="navbar-brand">
+    <span>
+      Easy Market
+    </span>
+  </a>
+  <header class="header_section">
+    <nav class="navbar navbar-expand-lg custom_nav-container">
+
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class=""></span>
+      </button>
+
+      <div class="collapse navbar-collapse flex-end" id="navbarSupportedContent" [ngSwitch]="loggedType">
+        <div class="user_option" *ngSwitchCase="'home'">
+          <a routerLink="/login">
+            <button mat-icon-button color="primary" aria-label="login">
+              <mat-icon [ngStyle]="{'color':'black'}" aria-label="login" matTooltip="login" routerLink="/login">login</mat-icon>
+            </button>
+            <span>
+              Login
+            </span>
+          </a>
+        </div>
+
+        <div class="user_option" *ngSwitchCase="'customer'">
+          <a routerLink="/home">
+            <button mat-icon-button color="primary" aria-label="home">
+              <mat-icon [ngStyle]="{'color':'black'}" aria-label="home" matTooltip="home">home</mat-icon>
+            </button>
+            <span>
+              Home
+            </span>
+          </a>
+          <a routerLink="/home/address">
+            <button mat-icon-button color="primary" aria-label="address">
+              <mat-icon [ngStyle]="{'color':'black'}" aria-label="address" matTooltip="address">add_location_alt</mat-icon>
+            </button>
+            <span>
+              Address
+            </span>
+          </a>
+          <a routerLink="/home/cart">
+            <button mat-icon-button color="primary" aria-label="shopping cart">
+              <mat-icon [ngStyle]="{'color':'black'}" [matBadge]="auth.cartAmount" matBadgeColor="accent" aria-label="shopping cart">shopping_cart</mat-icon>
+            </button>
+            <span>
+              Cart
+            </span>
+          </a>
+          <a>
+            <button mat-icon-button color="primary" aria-label="logout" (click)="logout()">
+              <mat-icon [ngStyle]="{'color':'black'}" aria-label="logout" matTooltip="logout" >logout</mat-icon>
+            </button>
+          </a>
+        </div>
+
+        <div class="user_option" *ngSwitchCase="'admin'">
+          <a routerLink="/admin">
+            <button mat-icon-button color="primary" aria-label="home">
+              <mat-icon [ngStyle]="{'color':'black'}" aria-label="home" matTooltip="home">home</mat-icon>
+            </button>
+            <span>
+              Home
+            </span>
+          </a>
+          <a routerLink="/admin/order">
+            <button mat-icon-button color="primary" aria-label="order">
+              <mat-icon [ngStyle]="{'color':'black'}" aria-label="order" matTooltip="order">playlist_add_check_circle</mat-icon>
+            </button>
+            <span>
+              Order
+            </span>
+          </a>
+          <a>
+            <button mat-icon-button color="primary" aria-label="logout" (click)="logout()">
+              <mat-icon [ngStyle]="{'color':'black'}" aria-label="logout" matTooltip="logout" >logout</mat-icon>
+            </button>
+          </a>
+        </div>
       </div>
-      <div class="ml-auto" *ngSwitchCase="'customer'">
-        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-          <li class="nav-item">
-            <a class=" nav-link" routerLink="/home">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class=" nav-link" routerLink="/home/address">Address</a>
-          </li>
-          <li class="nav-item">
-            <a class=" nav-link" routerLink="/home/cart">Cart</a>
-          </li>
-          <li class="nav-item">
-            <a class=" nav-link " (click)="logout()" style="cursor: pointer; float: right;">Log out</a>
-          </li>
-        </ul>
-      </div>
-      <div class="ml-auto" *ngSwitchCase="'admin'">
-        <ul class="navbar-nav mt-2 mt-lg-0 ">
-          <li class="nav-item">
-            <a class=" nav-link" routerLink="/admin">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class=" nav-link" routerLink="/admin/order">Orders</a>
-          </li>
-          <li class="nav-item">
-            <a class=" nav-link" (click)="logout()" style="cursor: pointer;">Log out</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    </nav>
+  </header>
+  <!-- end header section -->
 </div>
