--- a/frontend/src/app/component/register/register.component.html
+++ b/frontend/src/app/component/register/register.component.html
@@ -1,46 +1,43 @@
 <app-navigation></app-navigation>
-<div class="container">
-    <div class="row">
-        <div class="offset-2 col-6">
-            <div class="card login shadow p-3 mb-5 bg-white rounded ">
-                <div class="card-body">
-                    <form [formGroup]="registerForm" (ngSubmit)="register()">
-                        <div class="form-group">
-                            <div class="register-input-box">
-                                <span class="register-input-label">*Email:</span>
-                                <input class="form-control register-input" type="email" formControlName="email" placeholder="xyz@gmail.com" required>
-                                <label class="register-input-label required" *ngIf="registerForm.value.email == ''">Required</label>
-                            </div>
-                            <div class="invalid-error" *ngIf="validateEmail()">
-                                <label>* Please enter a valid Email address.</label>
-                            </div>
-                            
+
+<div class="hero_area">
+    <div class="body">
+        <div class="main">
+            <!-- Sign up form -->
+            <section class="signup">
+                <div class="container">
+                    <div class="signup-content">
+                        <div class="signup-form">
+                            <h2 class="form-title">Sign Up</h2>
+                            <form class="register-form" id="register-form" [formGroup]="registerForm" (ngSubmit)="register()">
+                                <div class="form-group">
+                                    <label for="name"><mat-icon [ngStyle]="{'color':'black'}" aria-label="username" matTooltip="username">person</mat-icon></label>
+                                    <input type="text" name="name" id="name" formControlName="username" placeholder="Username" required/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="email"><mat-icon [ngStyle]="{'color':'black'}" aria-label="email" matTooltip="email">email</mat-icon></label>
+                                    <input type="email" name="email" id="email" formControlName="email" placeholder="xyz@gmail.com" required/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="pass"><mat-icon [ngStyle]="{'color':'black'}" aria-label="password" matTooltip="password">key</mat-icon></label>
+                                    <input type="password" name="pass" id="pass" formControlName="password" placeholder="Password" required minlength="8"/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="age"><mat-icon [ngStyle]="{'color':'black'}" aria-label="age" matTooltip="age">numbers</mat-icon></label>
+                                    <input type="number" formControlName="age" placeholder="Age">
+                                </div>
+                                <div class="form-group form-button">
+                                    <input type="submit" name="signup" id="signup" class="form-submit" value="Register" [disabled]="validateRegisterButton()"/>
+                                </div>
+                            </form>
                         </div>
-                        <div class="form-group">
-                            <div class="register-input-box">
-                                <span class="register-input-label">Username:</span>
-                                <input class="form-control register-input" formControlName="username" placeholder="Username">
-                            </div>
+                        <div class="signup-image">
+                            <figure><img src="assets/img/signup-image.jpg" alt="sign up image"></figure>
+                            <a href="#" class="signup-image-link">I am already member.</a>
                         </div>
-                        <div class="form-group">
-                            <div class="register-input-box">
-                                <span class="register-input-label">Password:</span>
-                                <input class="form-control register-input" type="password" formControlName="password" placeholder="Password" required minlength="8">
-                                <label class="register-input-label required" *ngIf="registerForm.value.password == ''">Required</label>
-                            </div>
-                            <div class="invalid-error" *ngIf="validatePwCount()">
-                                <label>* Your Password must be a minimum of 8 characters.</label>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="register-input-box">
-                                <span class="register-input-label">Age:</span>
-                                <input class="form-control register-input" type="number" formControlName="age" placeholder="Age">
-                            </div>
-                        </div>
-                        <input type="submit" class="btn btn-secondary align-right" value="Register" [disabled]="validateRegisterButton()">
-                    </form>
+                    </div>
                 </div>
-            </div>
+            </section>
         </div>
-        <div>
+    </div>
+</div>
