[frontend] checkout page. change payment type to select option and amount is retrieved from cart. phonenumber is retrieved from address.

--- a/frontend/src/app/component/navigation/navigation.component.html
+++ b/frontend/src/app/component/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <div class="hero_area">
   <!-- header section strats -->
-  <a class="navbar-brand">
+  <a class="navbar-brand" routerLink="/home">
     <span>
       Easy Market
     </span>
