--- a/frontend/src/app/component/home/checkout/checkout.component.html
+++ b/frontend/src/app/component/home/checkout/checkout.component.html
@@ -29,7 +29,8 @@
                         <input type="number" class="form-control" ngModel name="phone" #phone placeholder="+12342223456" [value]="this.model.phonenumber"/>
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group" *ngIf="paymentType.value == 'Bank Transfer'">
+                    <label class="control-label col-m-10" for="bankTransferReceipt">Bank Transfer Receipt: </label>
                     <input type="file" class="form-control" placeholder="Product Picture" #image
                             accept="image/*" name="image"
                             (change)="handleFileInput($event.target.files)">
