--- a/frontend/src/app/component/home/address/address.component.html
+++ b/frontend/src/app/component/home/address/address.component.html
@@ -1,54 +1,50 @@
 <app-navigation></app-navigation>
-<div class="container ">
-    <br>
-    <div class="row">
-        <div class="offset-2 col-6 ">
-            <form class="form-horizontal shadow p-3 mb-5 bg-white rounded" #f="ngForm" (ngSubmit)=" addOrUpdateAddress()" novalidate>
-                <div class="form-group">
-                    <label class="control-label col-m-10" for="address">Address: </label>
-                    <div class="col-m-10">
-                        <input type="text" class="form-control" name="address" [(ngModel)]="model.address" placeholder="Address"/>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-m-10" for="city">City: </label>
-                    <div class="col-m-10">
-                        <input type="text" class="form-control" name="city" [(ngModel)]="model.city" placeholder="Atlanta"/>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-m-10" for="state">State: </label>
-                    <div class="col-m-10">
-                        <input type="text" class="form-control" name="state" [(ngModel)]="model.state" placeholder="Georgia"/>
-                    </div>
-                </div>
-                <div class="form-group">
-                        <label class="control-label col-m-10" for="country">Country: </label>
-                        <div class="col-m-10">
-                            <input type="text" class="form-control" name="country" [(ngModel)]="model.country" placeholder="US"/>
+
+<div class="hero_area">
+    <div class="body">
+        <div class="main">
+            <!-- Sign up form -->
+            <section class="signup">
+                <div class="container">
+                    <div class="signup-content">
+                        <div class="signup-form">
+                            <h2 class="form-title">Address</h2>
+                            <form class="register-form" id="register-form" #f="ngForm" (ngSubmit)=" addOrUpdateAddress()" novalidate>
+                                <div class="form-group">
+                                    <label for="address">Address: </label>
+                                    <input type="text" name="address" id="address" [(ngModel)]="model.address" placeholder="Address"/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="city">City: </label>
+                                    <input type="text" name="city" id="city" [(ngModel)]="model.city" placeholder="Atlanta"/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="address">State: </label>
+                                    <input type="text" name="state" id="state" [(ngModel)]="model.state" placeholder="Georgia"/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="address">Country: </label>
+                                    <input type="text" name="country" id="country" [(ngModel)]="model.country" placeholder="US"/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="address">Zipcode: </label>
+                                    <input type="text" name="zipcode" id="zipcode" [(ngModel)]="model.zipcode" placeholder="22222"/>
+                                </div>
+                                <div class="form-group">
+                                    <label for="age">Phone Number: </label>
+                                    <input type="number" name="phonenumber" id="phonenumber" [(ngModel)]="model.phonenumber" placeholder="+12342223456">
+                                </div>
+                                <div class="form-group form-button">
+                                    <input type="submit" name="update" id="update" class="form-submit" value="Update"/>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="signup-image">
+                            <figure><img src="assets/img/address.png" alt="address image"></figure>
                         </div>
                     </div>
-                <div class="form-group">
-                    <label class="control-label col-m-10" for="zipcode">Zipcode: </label>
-                    <div class="col-m-10">
-                        <input type="text" type="number" class="form-control" name="zipcode" [(ngModel)]="model.zipcode" placeholder="22222"/>
-                    </div>
                 </div>
-                <div class="form-group">
-                    <label class="control-label col-m-10" for="phone">Phone Number: </label>
-                    <div class="col-m-10">
-                        <input type="number" class="form-control" name="phone" [(ngModel)]="model.phonenumber" placeholder="+12342223456"/>
-                    </div>
-                </div>
-                <br />
-                <div class="form-group">
-                    <div class="col-m-offset-2 col-m-4">
-                        <button type="submit" class="btn  btn-primary" name="signup">
-                            Update
-                        </button>
-                    </div>
-                </div>
-            </form>
+            </section>
         </div>
     </div>
 </div>
