--- a/frontend/src/app/component/home/home.component.html
+++ b/frontend/src/app/component/home/home.component.html
@@ -1,9 +1,49 @@
 <app-navigation></app-navigation>
-<div class="container">
-  <br>
-  <div class="row">
-    <div class="col-3 align-left" *ngFor="let product of products">
-      <app-product [product]="product" (productAddToCart)="addToCart($event)">Loading...</app-product>
+<div class="hero_area">
+  <section class="slider_section">
+      <div class="slider_container">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-md-7">
+                    <div class="detail-box">
+                      <h1>
+                        Welcome To Our <br>
+                        Gift Shop
+                      </h1>
+                    </div>
+                  </div>
+                  <div class="col-md-5 ">
+                    <div class="img-box">
+                      <img src="assets/img/slider-img.png" alt="" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+</div>
+<div class="hero_area">
+  <section class="shop_section layout_padding">
+    <div class="">
+      <div class="heading_container heading_center">
+        <h2>Latest Products</h2>
+      </div>
+      <div class="row">
+        <div class="col-sm-6 col-md-4 col-lg-3" *ngFor="let product of products">
+          <app-product [product]="product" (productAddToCart)="addToCart($event)">Loading...</app-product>
+        </div>
+      </div>
+      <div class="btn-box">
+        <a href="">
+          View All Products
+        </a>
+      </div>
     </div>
-  </div>
+  </section>
 </div>
