--- a/frontend/src/app/component/home/product/product.component.html
+++ b/frontend/src/app/component/home/product/product.component.html
@@ -1,9 +1,21 @@
-<div class="card">
-        <div class="card-body">
-                <h5 class="card-title">{{product.productname}}</h5>
-                <img src="data:image/png;base64,{{product.productimage}}" class="img-responsive" height="150px"
-                        width="200px" alt="Image">
-                <p class="card-text "> {{product.description}}</p>
-                <button class="btn btn-primary" style="text-align: right" (click)="addToCart()">Add to cart</button>
-        </div>
+<div class="box">
+  <a>
+    <div class="img-box">
+      <img src="data:image/png;base64,{{ product.productimage }}" alt="" />
+    </div>
+    <div class="detail-box">
+      <h6>{{ product.productname }}</h6>
+      <h6>
+        Price
+        <span> ${{ product.price }} </span>
+      </h6>
+    </div>
+    <div class="new">
+      <span> New </span>
+    </div>
+  </a>
+
+  <div class="custom-btn" style="text-align: right" (click)="addToCart()">
+    <a> Add to Cart </a>
+  </div>
 </div>
