--- a/frontend/src/app/component/navigation/navigation.component.html
+++ b/frontend/src/app/component/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <div class="hero_area">
   <!-- header section strats -->
-  <a class="navbar-brand" routerLink="/home">
+  <a class="navbar-brand">
     <span>
       Easy Market
     </span>
