--- a/frontend/src/app/component/home/address/address.component.html
+++ b/frontend/src/app/component/home/address/address.component.html
@@ -3,7 +3,7 @@
 <div class="hero_area">
     <div class="body">
         <div class="main">
-            <!-- Sign up form -->
+            <!-- Address form -->
             <section class="signup">
                 <div class="container">
                     <div class="signup-content">
