--- a/frontend/src/app/component/home/checkout/checkout.component.html
+++ b/frontend/src/app/component/home/checkout/checkout.component.html
@@ -1,49 +1,53 @@
 <app-navigation></app-navigation>
-<div class="container ">
-    <br>
-    <a routerLink="/home/cart" class="btn btn-primary"><i class="fa fa-angle-left"></i> Go to Cart</a><br>
-    <div class="row">
-        <div class="offset-2 col-6 ">
-            <h2 style="padding-top: 10px;"> Checkout Page</h2>
-            <br>
-            <form class="form-horizontal shadow p-3 mb-5 bg-white rounded" #f="ngForm" (ngSubmit)="f.form.valid && placeOrder(paymentType, amount, phone)">
-                <div class="form-group">
-                    <label class="control-label col-m-10">* Payment Type: </label>
-                    <div class="col-m-10">
-                        <select class="form-control" ngModel name="paymentType" placeholder="Payment Type" #paymentType required>
-                            <option value="" disabled selected>Select your payment method</option>
-                            <option value="Credit Card">Credit Card</option>
-                            <option value="Bank Transfer">Bank Transfer</option>
-                          </select>
+
+<div class="hero_area">
+    <div class="body">
+        <div class="main">
+            <!-- Checkout Form -->
+            <section class="sign-in">
+                <div class="container">
+                    <div class="signin-content">
+                        <div class="signin-image">
+                            <figure><img src="assets/img/payment.png" alt="payment image"></figure>
+                            <div class="back-to-cart" routerLink="/home/cart"><a><i class="fa fa-angle-left"></i></a><span class="text-muted"> Back to cart</span></div>
+                            <!-- <a routerLink="/home/cart" class="signup-image-link"><i class="fa fa-angle-left"></i> Back to cart</a> -->
+                        </div>
+    
+                        <div class="signin-form">
+                            <h2 class="form-title">Check Out</h2>
+                            <form class="register-form" id="login-form" #f="ngForm" (ngSubmit)="f.form.valid && placeOrder(paymentType, amount, phone)">
+                                <div class="form-group">
+                                    <div class="control-label col-m-10">Payment Type:</div>
+                                    <div class="col-m-10">
+                                        <select class="form-control" ngModel name="paymentType" placeholder="Payment Type" #paymentType required>
+                                            <option value="" disabled selected>Select your payment method</option>
+                                            <option value="Credit Card">Credit Card</option>
+                                            <option value="Bank Transfer">Bank Transfer</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="control-label col-m-10">Amount:</div>
+                                    <input type="text" ngModel name="amount" placeholder="Total Amount" #amount disabled required [value]="this.totalSum"/>
+                                </div>
+                                <div class="form-group">
+                                    <div class="control-label col-m-10">Phone Number:</div>
+                                    <input type="number" ngModel name="phone" #phone placeholder="+12342223456" [value]="this.model.phonenumber"/>
+                                </div>
+                                <div class="form-group" *ngIf="paymentType.value == 'Bank Transfer'">
+                                    <div class="control-label col-m-10">Bank Transfer Receipt:</div>
+                                    <input type="file" placeholder="Bank Transfer Receipt" #image
+                                        accept="image/*" name="image"
+                                        (change)="handleFileInput($event.target.files)">
+                                </div>
+                                <div class="form-group form-button">
+                                    <input type="submit" name="payment" id="payment" class="form-submit" value="Pay"/>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label class="control-label col-m-10">* Amount: </label>
-                    <div class="col-m-10">
-                        <input type="text" class="form-control" ngModel name="amount" placeholder="Payment Type" #amount disabled required [value]="this.totalSum"/>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-m-10" for="phone">Phone Number: </label>
-                    <div class="col-m-10">
-                        <input type="number" class="form-control" ngModel name="phone" #phone placeholder="+12342223456" [value]="this.model.phonenumber"/>
-                    </div>
-                </div>
-                <div class="form-group" *ngIf="paymentType.value == 'Bank Transfer'">
-                    <label class="control-label col-m-10" for="bankTransferReceipt">Bank Transfer Receipt: </label>
-                    <input type="file" class="form-control" placeholder="Product Picture" #image
-                            accept="image/*" name="image"
-                            (change)="handleFileInput($event.target.files)">
-                </div>
-                <br />
-                <div class="form-group">
-                    <div class="col-m-offset-2 col-m-4">
-                        <button type="submit" class="btn  btn-primary" name="payment">
-                            Pay
-                        </button>
-                    </div>
-                </div>
-            </form>
+            </section>
         </div>
     </div>
 </div>
