--- a/frontend/src/app/component/admin/admin.component.html
+++ b/frontend/src/app/component/admin/admin.component.html
@@ -2,8 +2,8 @@
 <div class="container">
         <div class="row">
                 <div class="col-12">
-                        <button class="mybtn btn btn-secondary" (click)="show()" *ngIf="!showAdd">Click to Add</button>
-                        <button class="mybtn btn btn-secondary" (click)="hide()" *ngIf="showAdd">Click to hide</button>
+                        <button class="mybtn btn btn-secondary" (click)="show()" *ngIf="!showAdd">Add New Product</button>
+                        <button class="mybtn btn btn-secondary" (click)="hide()" *ngIf="showAdd">Hide</button>
                 </div>
         </div>
         <form class="form-horizontal shadow p-3 mb-5 bg-white rounded " #f="ngForm" (ngSubmit)="f.form.valid && addProd(desc,quan,price,prodname,image)"
@@ -17,17 +17,17 @@
                                 </div>
                                 <div class="form-group input-box">
                                         <span class="col-2 input-label">Product Description:</span>
-                                        <textarea type="text" class="form-control" placeholder="description" name="desc"
+                                        <textarea type="text" class="form-control" placeholder="Description" name="desc"
                                                 #desc ngModel rows="5"></textarea>
                                 </div>
                                 <div class="form-group input-box">
                                         <span class="col-2 input-label">Quantity:</span>
-                                        <input type="text" class="form-control" placeholder="quantity" name="quan" #quan (keypress)="onKeyPressNumeric($event)" maxlength="6"
+                                        <input type="text" class="form-control" placeholder="Quantity" name="quan" #quan (keypress)="onKeyPressNumeric($event)" maxlength="6"
                                                 ngModel>
                                 </div>
                                 <div class="form-group input-box">
                                         <span class="col-2 input-label">Price:</span>
-                                        <input type="text" class="form-control" placeholder="price" name="price" #price (keypress)="onKeyPressNumeric($event)" maxlength="6"
+                                        <input type="text" class="form-control" placeholder="Price" name="price" #price (keypress)="onKeyPressNumeric($event)" maxlength="6"
                                                 ngModel>
                                 </div>
                                 <div class="form-group">
@@ -51,6 +51,10 @@
                 </div>
         </form>
         <hr>
+        <div class="heading_container heading_center">
+                <h2>All Products</h2>
+        </div>
+        <br>
         <div class="row">
                 <div class="col-3 align-left" *ngFor="let product of products">
                         <div class="card shadow p-3 mb-5 bg-white rounded">
