--- a/frontend/src/app/component/admin/edit-item/edit-item.component.html
+++ b/frontend/src/app/component/admin/edit-item/edit-item.component.html
@@ -6,22 +6,27 @@
                 <div class="row">
                         <div class="col-6">
                                 <div class="form-group">
+                                        <span class="col-2 input-label">Product Name:</span>
                                         <input type="text" class="form-control" placeholder="Product Name" #prodname
                                                 ngModel name="prodname" [(ngModel)]="product.productname">
                                 </div>
                                 <div class="form-group">
-                                        <textarea type="text" class="form-control" placeholder="description" name="desc"
+                                        <span class="col-2 input-label">Product Description:</span>
+                                        <textarea type="text" class="form-control" placeholder="Description" name="desc"
                                                 #desc ngModel [(ngModel)]="product.description" rows="5"></textarea>
                                 </div>
                                 <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="quantity" name="quan" #quan
+                                        <span class="col-2 input-label">Quantity:</span>
+                                        <input type="text" class="form-control" placeholder="Quantity" name="quan" #quan
                                                 ngModel [(ngModel)]="product.quantity">
                                 </div>
                                 <div class="form-group">
-                                        <input type="text" class="form-control" placeholder="price" name="price" #price
+                                        <span class="col-2 input-label">Price:</span>
+                                        <input type="text" class="form-control" placeholder="Price" name="price" #price
                                                 ngModel [(ngModel)]="product.price">
                                 </div>
                                 <div class="form-group">
+                                        <span>Note: Supported formats are JPG,PNG,IMG</span>
                                         <input type="file" class="form-control" placeholder="Product Picture" #image
                                                 accept="image/*" name="image"
                                                 (change)="handleFileInput($event.target.files)">
